--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  --main-color: #f08245;
 }
 
 * {
@@ -13,4 +14,48 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.fa-sun {
+  animation: spin 2s linear infinite;
+}
+
+#card {
+  background-image: url("https://images.unsplash.com/photo-1603016838387-eab097ff97b6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
+}
+
+.content {
+  color: var(--main-color);
+}
+
+.form-label {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.form-label:hover {
+  animation: scale 2s linear;
 }
