--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   --main-color: #f08245;
 }
 
+h2,
+h3,
+h4 {
+  font-family: "Reddit Mono";
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +20,46 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.logo {
+  font-family: "Seymour One", sans-serif;
+
+  background: linear-gradient(
+    to left,
+    violet,
+    indigo,
+    blue,
+    green,
+    yellow,
+    orange,
+    red
+  );
+  background-clip: text;
+  display: inline;
+  color: transparent;
+  animation: animated 2s linear infinite;
+}
+
+@keyframes animated {
+  to {
+    background-position-x: 161px;
+  }
+}
+
+.nav-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  animation: scale 1s linear;
+}
+
+.dropdown-item:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  animation: scale 1s linear;
+}
+
+.fa-solid:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  animation: scale 1s linear;
 }
 
 @keyframes spin {
@@ -33,7 +79,12 @@ body {
   background-image: url("https://images.unsplash.com/photo-1603016838387-eab097ff97b6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   background-position: center;
-} 
+}
+#searchBar {
+  background: transparent;
+  border: none;
+  font-weight: bolder;
+}
 
 .content {
   color: var(--main-color);
@@ -48,9 +99,11 @@ body {
   0% {
     transform: scale(1);
   }
+
   50% {
-    transform: scale(1.2);
+    transform: scale(1.5);
   }
+
   100% {
     transform: scale(1);
   }
@@ -60,3 +113,30 @@ body {
   animation: scale 2s linear;
 }
 
+.container {
+  margin: 10rem;
+}
+
+.mit-hover {
+  > a > i:hover {
+    animation: scale 500ms linear;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+h3:hover {
+  text-decoration: underline;
+}
+
+footer {
+  background: linear-gradient(
+    to right,
+    violet,
+    indigo,
+    blue,
+    green,
+    yellow,
+    orange,
+    red
+  );
+}
