--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@
   --main-color: #f08245;
 }
 
-h2,
-h3,
-h4 {
-  font-family: "Reddit Mono";
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -21,6 +15,14 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+h2,
+h3,
+h4 {
+  font-family: "Reddit Mono";
+}
+
+/* Nav -- Logo -- Bereich  */
 
 .logo {
   font-family: "Seymour One", sans-serif;
@@ -41,6 +43,10 @@ body {
   animation: animated 2s linear infinite;
 }
 
+.logo:hover {
+  font-size: 60px;
+}
+
 @keyframes animated {
   to {
     background-position-x: 161px;
@@ -56,6 +62,8 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
   animation: scale 1s linear;
 }
+
+/* ----- Header Weather Card ----- */
 
 .fa-solid:hover {
   background-color: rgba(255, 255, 255, 0.1);
@@ -101,7 +109,7 @@ body {
   }
 
   50% {
-    transform: scale(1.5);
+    transform: scale(1.2);
   }
 
   100% {
@@ -112,6 +120,8 @@ body {
 .form-label:hover {
   animation: scale 2s linear;
 }
+
+/* ----- News  videos Bereich  ----- */
 
 .container {
   margin: 10rem;
@@ -128,15 +138,24 @@ h3:hover {
   text-decoration: underline;
 }
 
+/* ----- Footer Bereich  ----- */
+
 footer {
   background: linear-gradient(
     to right,
-    violet,
-    indigo,
-    blue,
-    green,
-    yellow,
-    orange,
-    red
+    rgba(238, 130, 238, 0.5) 0%,
+    rgba(238, 130, 238, 0.5) 2%,
+    rgba(75, 0, 130, 0.5) 2%,
+    rgba(75, 0, 130, 0.5) 4%,
+    rgba(0, 0, 255, 0.5) 4%,
+    rgba(0, 0, 255, 0.5) 6%,
+    rgba(0, 128, 0, 0.5) 6%,
+    rgba(0, 128, 0, 0.5) 8%,
+    rgba(255, 255, 0, 0.5) 8%,
+    rgba(255, 255, 0, 0.5) 10%,
+    rgba(255, 165, 0, 0.5) 10%,
+    rgba(255, 165, 0, 0.5) 12%,
+    rgba(255, 0, 0, 0.5) 12%,
+    rgba(255, 0, 0, 0.5) 14%
   );
 }
