--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #f08245;
+  --back-color: yellow;
 }
 
 * {
@@ -13,13 +14,40 @@ body {
   background-image: url(https://images.unsplash.com/photo-1618817998180-3fde3a5edf5d?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
+  
+
 }
 
 h2,
 h3,
 h4 {
   font-family: "Reddit Mono";
+}
+
+#fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background: linear-gradient(
+    to right,
+    rgba(238, 130, 238, 0.5) 0%,
+    rgba(238, 130, 238, 0.5) 2%,
+    rgba(75, 0, 130, 0.5) 2%,
+    rgba(75, 0, 130, 0.5) 4%,
+    rgba(0, 0, 255, 0.5) 4%,
+    rgba(0, 0, 255, 0.5) 6%,
+    rgba(0, 128, 0, 0.5) 6%,
+    rgba(0, 128, 0, 0.5) 8%,
+    rgba(255, 0, 0, 0.5) 8%,
+    rgba(255, 0, 0, 0.5) 10%,
+    rgba(255, 165, 0, 0.5) 10%,
+    rgba(255, 165, 0, 0.5) 12%,
+    rgba(255, 255, 0, 0.5) 12%,
+    rgba(255, 255, 0, 0.4) 14% 
+  );
+
 }
 
 /* Nav -- Logo -- Bereich  */
@@ -65,6 +93,10 @@ h4 {
 
 /* ----- Header Weather Card ----- */
 
+#weather {
+  margin-top: 150px;
+}
+
 .fa-solid:hover {
   background-color: rgba(255, 255, 255, 0.1);
   animation: scale 1s linear;
@@ -73,6 +105,7 @@ h4 {
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+
   }
   100% {
     transform: rotate(360deg);
@@ -127,6 +160,20 @@ h4 {
   margin: 10rem;
 }
 
+#videos {
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+#reisewetter {
+  background-color: rgba(255, 255, 255, 0.7);
+
+  a {
+    text-decoration: none;
+  }
+}
+
+
+
 .mit-hover {
   > a > i:hover {
     animation: scale 500ms linear;
@@ -151,11 +198,11 @@ footer {
     rgba(0, 0, 255, 0.5) 6%,
     rgba(0, 128, 0, 0.5) 6%,
     rgba(0, 128, 0, 0.5) 8%,
-    rgba(255, 255, 0, 0.5) 8%,
-    rgba(255, 255, 0, 0.5) 10%,
+    rgba(255, 0, 0, 0.5) 8%,
+    rgba(255, 0, 0, 0.5) 10%,
     rgba(255, 165, 0, 0.5) 10%,
     rgba(255, 165, 0, 0.5) 12%,
-    rgba(255, 0, 0, 0.5) 12%,
-    rgba(255, 0, 0, 0.5) 14%
+    rgba(255, 255, 0, 0.5) 12%,
+    rgba(255, 255, 0, 0.5) 14% 
   );
 }
